# git-log-to-sqlite

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: analyzer.rs  args.rs  config.rs  file.rs  lib.rs  log.rs  main.rs  repository.rs
