[package]
name = "git-log-to-sqlite"
version = "0.1.1"
edition = "2021"
authors = ["kaoru <k@warpnine.io>"]
description = "A tool to convert git repository logs (without merge commit) to sqlite database"
license = "MIT"

[[bin]]
name = "git-log-to-sqlite"
path = "src/main.rs"

[dependencies]
# for easier path handling
camino = { version = "1.1.6", features = ["serde"] }

# for parsing command line arguments
clap = { version = "4.4.18", features = ["derive"] }

# for working with git repository
git2 = "0.18.1"

# for indicating progress
indicatif = "0.17.7"

# connection pool
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"

# for working with sqlite database
rusqlite = "0.30.0"

# for deserializing config file
serde = "1.0.195"
serde_derive = "1.0.195"
toml = "0.8.8"

# async runtime
tokio = { version = "1.35.1", features = ["full"] }

# to traverse directory
walkdir = "2.4.0"
