[package]
name = "git-log-to-sqlite"
version = "0.1.5"
edition = "2021"
authors = ["kaoru <k@warpnine.io>"]
description = "A tool to convert git repository logs (without merge commit) to sqlite database"
license = "MIT"

[[bin]]
name = "git-log-to-sqlite"
path = "src/main.rs"

[lib]
name = "git_log_to_sqlite"
path = "src/lib.rs"

[dependencies]
# Error management
anyhow = "1.0.93"

# for easier path handling
camino = { version = "1.1.9", features = ["serde"] }

# for parsing command line arguments
clap = { version = "4.5.21", features = ["derive"] }

# for working with git repository
git2 = "0.19.0"

# for indicating progress
indicatif = "0.17.9"

# connection pool
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"

# for working with sqlite database
rusqlite = "0.32.1"

# for deserializing config file
serde = "1.0.215"
toml = "0.8.19"

# async runtime
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }

# to traverse directory
walkdir = "2.5.0"
